# fishmlserv

./: Dockerfile  MANIFEST.in  README.md  fly.toml  pyproject.toml
note/: fish.py  model.pkl
src/fishmlserv/: cli.py  main.py
src/fishmlserv/model/: .manager.py.swp  manager.py
