[project]
name = "fishmlserv"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "matplotlib>=3.7.5",
    "scikit-learn>=1.3.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
