[project]
name = "fishmlserv"
version = "0.8.0"
description = "Default template for PDM package"
authors = [
    {name = "thephunkmonk", email = "andrewchoi1218@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
